--- a/LibraryManagement system API/LibraryManagement system API.csproj
+++ b/LibraryManagement system API/LibraryManagement system API.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer3.Contrib.AccessTokenValidation" Version="4.1.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
       <PrivateAssets>all</PrivateAssets>
