I here add the reset and forget password to the user controller and test them adding the STMP Gmail that when you reset passwor it sent a token to the gmail and you must confirm it first before reset password

--- a/LibraryManagement system API/appsettings.json
+++ b/LibraryManagement system API/appsettings.json
@@ -9,5 +9,12 @@
 
   "ConnectionStrings": {
     "constr": "Data Source=.; Initial Catalog= LibraryManagementSystemAPI; Integrated Security=True; Encrypt=True; TrustServerCertificate=True"
-  }
+  },
+
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "mazenmohsen11111@gmail.com",
+    "Password": "rkay ookv neew srdv" // Use app passwords if 2-Step Verification is enabled
+  }  
 }
